k8s-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: iris-api
  namespace: default
  labels:                 
    app: iris-api
spec:
  selector:
    app: iris-api
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
