k8s-manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iris-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: iris-api.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iris-api
            port:
              number: 8000
